2005-02-28 09:02 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSearchT) added parallel check
	to return NULL if envoked for a ghost node.

2005-02-27 23:32 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridcreate_) called gridSetCostConstraint to
	turn on face UV parameter area checks in addition to the default
	cell volume check. This is to prevent a split, collapse, or swap
	from inadvertently causing an inverted face for parallel FUN3D
	adaptation runs.

2005-02-27 22:18 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridCostConstraint,gridSetCostConstraint) added
	new gridCOST_CNST_AREAUV.
	* src/gridmetric.c (gridAR) added gridCOST_CNST_AREAUV
	gridCostConstraint to check gridMinCellFaceAreaUV.

2005-02-27 22:01 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (minCellFaceAreaUV) created to find the
	smallest UV area of a cell face. to be used for cost constraint.

2005-02-27 21:35 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (faceAreaUV,minFaceAreaUV) inserted methods
	from gridcad. This introduces a dependency on CADGeom for
	CADGeom_ReversedSurfaceNormal. To allow for the construction
	of a grid cost constraint on face surface area.
	* src/gridcad.c (faceAreaUV,minFaceAreaUV) moved methods to
	gridmetric.

2005-02-21 00:06 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotComment) To allow the insertion of
	comments into tecplot files I added this function.
	* src/gridfortran.c (gridwritetecplotsurfacezone_) dump flagged
	cell info to tecplot file as comments instead of stdout. This is
	to make it easier to investigate negative cells by having full
	info on hte cell next to its geometry.
	
2005-02-17 22:36 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeomExtras.c (ErrMgr_Append) Added for fake
	CADGeom_ReversedSurfaceNormal call to allow adaptation without the
	SDK.
	
2005-02-16 15:15 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridcad.c (gridFaceAreaUV) check orientation of surface to